Fixes overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     margin: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 body {
@@ -89,6 +90,7 @@ nav {
     align-items: center;
     padding: 3rem;
     background-image: linear-gradient(62deg, black 0%, gray 100%);
+    width: 100vw;
 }
 
 .section-header {
@@ -144,6 +146,7 @@ nav {
     align-items: center;
     padding: 1rem;
     margin: 2rem;
+    width: 100vw;
 }
 
 #contacting-icons {
